test/compile-errors/record.nz.ast.tata
file-ast(
	imports: []
	exports: []
	specs: []
	aliases: []
	structs: [
		struct(
			range(0, 46)
			true
			[]
			none
			record(
				none
				[
					field(range(18, 23), false, x, inststruct(range(20, 23), name-range(range(20, 23), int)))
					field(range(25, 30), false, y, inststruct(range(27, 30), name-range(range(27, 30), int)))
					field(range(32, 37), false, z, inststruct(range(34, 37), name-range(range(34, 37), int)))
					field(range(39, 44), false, w, inststruct(range(41, 44), name-range(range(41, 44), int)))]))]
	funs: [
		fun-decl(
			public?: true
			sig: sig-ast(
				range(46, 72)
				name-range(range(46, 60), make-my-record)
				inststruct(range(61, 70), name-range(range(61, 70), my-record))
				[])
			body: new-record(
				none
				[
					line(name-range(range(80, 81), x), literal(numeric, "1"))
					line(name-range(range(87, 88), y), literal(numeric, "2"))
					line(name-range(range(94, 97), zee), literal(numeric, "3"))
					line(name-range(range(103, 104), w), literal(numeric, "4"))]))])
